UPDATE:Added hamburger FIX:Content overflow, container width and text size

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --breakpoint-xs: 25rem;
   --font-lobster: "Lobster";
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -131,6 +132,10 @@
 @utility h3{
   font-size: 25px;
   font-weight: 900;
+}
+@utility small-text {
+  font-size:12px;
+  font-weight:700;
 }
 
 .text-heading1{
